# cpu-renderer

./: 3d.h  CMakeLists.txt  README.md  camera.h  camera.hpp  main.cpp  mesh.cpp  mesh.h  mesh.hpp  render_state.cpp  render_state.h  renderer.cpp  renderer.h  renderer.hpp  string_utils.cpp  string_utils.hpp  template_concepts.h  triangle.h  triangle.hpp  vec.h  vec2.h  vec3.h  vertex.h
